--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -18,7 +18,7 @@
   <div class="sync-grid">
     <label>On keyup:</label> <input data-bind="store1->value" data-sync="on:keyup|change value->store1">
     <label>Bind only:</label> <input data-bind="store1->value">
-    <label for="cb">Sync checkbox:</label> <input id="cb" type="checkbox" data-bind="store1->checked" data-sync="on:change checked->syncChecked()">
+    <label for="cb">Sync checkbox:</label> <input id="cb" type="checkbox" data-bind="store1->checked" data-sync="on:change syncChecked(checked)->store1">
     <label for="cb2">Bind checkbox:</label> <input id="cb2" type="checkbox" data-bind="isChecked(store1)->checked">
 
     <!-- Select (with dynamic options) -->
@@ -76,7 +76,7 @@
       store1.update("Last one")
     }, 12000)
 
-    function specialStyling({val, el}) {
+    function specialStyling(val, el) {
       if(val == "My text") {
         el.innerHTML = "My text";
         el.style = "background: blue; height: 5rem; width: 90vw; width: 12rem;";
@@ -102,24 +102,23 @@
       }
     }
 
-    function isChecked({val}) {
+    function isChecked(val) {
       if(val == "We're at 4k") return true;
       else return false;
     }
 
-    function showDiv({val}) {
+    function showDiv(val) {
       return val == "We're at 4k";
     }
 
-    // function syncChecked({val}) {
-    //   store1.update(val);
-    //   store2.update(s=> {
-    //     s.values[0] = val;
-    //     return s;
-    //   });
-    // }
+    function syncChecked(store1, store2) {
+      console.log("SYNCING CHECKED")
+      console.log("STORE 1 VAL", store1);
+      console.log("STORE 2 VAL", store2);
+      if(store1 === false) return "We're at 4k";
+    }
 
-    Cu.assignFuncs({specialStyling, isChecked, showDiv});
+    Cu.assignFuncs({specialStyling, isChecked, showDiv, syncChecked});
   </script>
 </body>
 </html>
