--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -119,7 +119,7 @@
       // Cu.box("store1").update(store1 === false ? "We're at 4k" : store1);
     }
 
-    Cu.assignFuncs({specialStyling, isChecked, showDiv, syncChecked});
+    Cu.assign({specialStyling, isChecked, showDiv, syncChecked});
   </script>
 </body>
 </html>
