--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -39,6 +39,8 @@
         <option value="We're at 4k">Show 4k text</option>
       </cu-default>
 
+      <nav data-fetch="on:mount GET(./header.html).header->nav"></nav>
+
       <!-- Always-present options -->
       <option value="Last one">Last one</option>
     </select>
