--- a/tests/interactive.iife/header.html
+++ b/tests/interactive.iife/header.html
@@ -1,4 +1,5 @@
 <header>
+    <h2 data-bind="store1->innerText">Default header</h2>
     <ul style="border-bottom: 1px solid gray; padding-bottom: 1rem;">
       <li><a href="https://www.google.com">Link 1</a></li>
       <li><a href="https://www.amazon.com">Link 2</a></li>
@@ -8,4 +9,10 @@
       <li><a href="link2.html">Internal Link 2</a></li>
       <li><a href="link3.html">Internal Link 3</a></li>
     </ul>
+
+    <style>
+      h2 {
+        margin-top: 0;
+      }
+    </style>
 </header>
