--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -39,8 +39,6 @@
         <option value="We're at 4k">Show 4k text</option>
       </cu-default>
 
-      <nav data-fetch="on:mount GET(./header.html).header->nav"></nav>
-
       <!-- Always-present options -->
       <option value="Last one">Last one</option>
     </select>
@@ -53,10 +51,11 @@
     <template cu-else>Else</template>
   </div>
 
+  <nav data-fetch="on:mount GET(tests/interactive.iife/header.html:header)->nav"></nav>
+
   <div class="trans" data-bind="specialStyling(store1)"></div>
 
   <!-- Store script -->
-  <script src="https://unpkg.com/htmx.org@1.9.10"></script>
   <script src="../dist/copper.js"></script>
   <script>
     const store1 = Cu.box("store1", { value: "My text" });
