Working fetch and replace

--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -51,7 +51,7 @@
     <template cu-else>Else</template>
   </div>
 
-  <nav data-fetch="on:mount GET(tests/interactive.iife/header.html:header)->nav"></nav>
+  <nav data-fetch="on:mount GET(tests/header.html:header)->nav"></nav>
 
   <div class="trans" data-bind="specialStyling(store1)"></div>
 
