--- a/tests/header.html
+++ b/tests/header.html
@@ -9,10 +9,15 @@
       <li><a href="link2.html">Internal Link 2</a></li>
       <li><a href="link3.html">Internal Link 3</a></li>
     </ul>
-
-    <style>
-      h2 {
-        margin-top: 0;
-      }
-    </style>
 </header>
+
+<script>
+  alert("Loaded header.html!")
+</script>
+
+<style>
+  h2 {
+    margin-top: 0;
+    color: red;
+  }
+</style>
