Basic nav, no push or pop state

--- a/tests/header.html
+++ b/tests/header.html
@@ -5,7 +5,7 @@
       <li><a href="https://www.amazon.com">Link 2</a></li>
       <li><a href="https://www.precisionplanting.com">Link 3</a></li>
       <li><a href="/">Home</a></li>
-      <li><a href="link1.html">Internal Link 1</a></li>
+      <li><a href="link1.html" data-fetch="on:click GET(/tests/link1.html:header)->nav">Internal Link 1</a></li>
       <li><a href="link2.html">Internal Link 2</a></li>
       <li><a href="link3.html">Internal Link 3</a></li>
     </ul>
