--- a/tests/link1.html
+++ b/tests/link1.html
@@ -7,7 +7,9 @@
     <title>Vite + Svelte + TS</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      No header here :-(
+    </header>
     <div id="body">
       YO YO YO WHUDDUP!!!
       <script>
