--- a/tests/link1.html
+++ b/tests/link1.html
@@ -7,6 +7,7 @@
     <title>Vite + Svelte + TS</title>
   </head>
   <body>
+    <div class="special">INSERTED!</div>
     <header>
       No header here :-(
     </header>
