--- a/tests/header.html
+++ b/tests/header.html
@@ -1,3 +1,5 @@
+<div class="special">INSERTED!</div>
+
 <header>
     <h2 data-bind="store1->innerText">Default header</h2>
     <ul style="border-bottom: 1px solid gray; padding-bottom: 1rem;">
@@ -5,7 +7,7 @@
       <li><a href="https://www.amazon.com">Link 2</a></li>
       <li><a href="https://www.precisionplanting.com">Link 3</a></li>
       <li><a href="/">Home</a></li>
-      <li><a href="link1.html" data-fetch="on:click GET(/tests/link1.html:header)->nav">Internal Link 1</a></li>
+      <li><a href="/tests/link1.html" data-get="on(click) GET(/tests/link1.html, header)-> nav">Internal Link 1</a></li>
       <li><a href="link2.html">Internal Link 2</a></li>
       <li><a href="link3.html">Internal Link 3</a></li>
     </ul>
