--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -52,7 +52,7 @@
   </div>
 
   <div class="special-insert">Default insert</div>
-  <nav data-get="on(mount) (tests/header.html, header, .special) -> (nav, .special-insert)"></nav>
+  <nav data-get="on(mount) (/tests/header.html, header, .special) -> (nav, .special-insert)"></nav>
 
   <div class="trans" data-bind="specialStyling(store1)"></div>
 
