--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -59,9 +59,9 @@
   <!-- Store script -->
   <script src="../dist/copper.js"></script>
   <script>
-    const store1 = Cu.box("store1", { value: "My text" });
-    const store3 = Cu.box("store3", { value: "one" });
-    const store2 = Cu.box("store2", { 
+    const store1 = Cu.store("store1", { value: "My text" });
+    const store3 = Cu.store("store3", { value: "one" });
+    const store2 = Cu.store("store2", { 
       value: { values: ["one", "two"]},
       upstream: ["store1", "store3"],
       updater: ([Store1, Store3], cur)=> {
@@ -70,7 +70,7 @@
         return cur;
       }
     });
-    const store4 = Cu.box("store4", {
+    const store4 = Cu.store("store4", {
       value: 1,
       upstream: ["store2"],
       updater: ([Store2])=> {
@@ -157,10 +157,10 @@
       // console.log("STORE 1 VAL", store1);
       // console.log("STORE 2 VAL", store2);
       // if(store1 === false) return "We're at 4k";
-      // Cu.box("store1").update(store1 === false ? "We're at 4k" : store1);
+      // Cu.store("store1").update(store1 === false ? "We're at 4k" : store1);
     }
 
-    Cu.assign({specialStyling, isChecked, showDiv, syncChecked});
+    // Cu.assign({specialStyling, isChecked, showDiv, syncChecked});
   </script>
 </body>
 </html>
