Fix initial dom registrations

--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -58,7 +58,7 @@
   <div class="trans" data-bind="specialStyling(store1)"></div>
 
   <!-- Store script -->
-  <script src="../dist/copper.js"></script>
+  <script src="../dist/dev.copper.js"></script>
   <script>
     // let store1 = Cu.store("store1", { value: "My text" });
     const store3 = Cu.store("store3", { value: "one" });
