--- a/tests/header.html
+++ b/tests/header.html
@@ -7,7 +7,7 @@
       <li><a href="https://www.amazon.com">Link 2</a></li>
       <li><a href="https://www.precisionplanting.com">Link 3</a></li>
       <li><a href="/">Home</a></li>
-      <li><a href="/tests/link1.html" data-get="on(click) (/tests/link1.html, header) -> header">Internal Link 1</a></li>
+      <li><a href="/tests/link1.html" data-get="on(click) /tests/link1.html -> header>header">Internal Link 1</a></li>
       <li><a href="link2.html">Internal Link 2</a></li>
       <li><a href="link3.html">Internal Link 3</a></li>
     </ul>
