--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -180,7 +180,7 @@
   }
 
   .cu-trans {
-    transition: transform 1s, opacity 1s;
+    transition-property: transform, opacity;
     transform: translateX(0);
     opacity: 1;
   }
