--- a/tests/link1.html
+++ b/tests/link1.html
@@ -10,6 +10,7 @@
     <div class="special">INSERTED!</div>
     <header>
       No header here :-(
+      <div><a href="/header.html" data-get="on(click) /tests/header.html -> header > nav">Back</a></div>
     </header>
     <div id="body">
       YO YO YO WHUDDUP!!!
