--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -175,6 +175,11 @@
 </html>
 
 <style>
+  body {
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
+
   nav {
     /* background: blue; */
     padding: 1rem;
