Playing with auto link

--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -65,8 +65,9 @@
       // inEndHook: (el)=> console.log("In end hook", el),
       // outStartHook: (el)=> console.log("Out start hook", el),
       // outEndHook: (el)=> console.log("Out end hook", el),
-      inDur: 1000,
-      outDur: 1000,
+      inDur: 200,
+      outDur: 200,
+      wrapperTransDur: 200,
       swapDelay: 0
     })
 
