--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -58,7 +58,7 @@
   <div class="trans" data-bind="specialStyling(store1)"></div>
 
   <!-- Store script -->
-  <script src="../dist/dev.copper.js"></script>
+  <script src="../dist/dev.copper.js" data-init="true"></script>
   <script>
     Cu.config({
       inDur: 200,
