JSDoc typing - trying to get it across

--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -60,6 +60,7 @@
   <!-- Store script -->
   <script src="../dist/dev.copper.js" data-init="true"></script>
   <script>
+    /// <reference path="../src/index.js" />
     Cu.config({
       inDur: 200,
       outDur: 200,
