--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -60,7 +60,7 @@
   <!-- Store script -->
   <script src="../dist/dev.copper.js" data-init="true"></script>
   <script>
-    /// <reference path="../src/index.js" />
+    console.log("COPPER", Cu)
     Cu.config({
       inDur: 200,
       outDur: 200,
