--- a/tests/bind-sync.html
+++ b/tests/bind-sync.html
@@ -23,13 +23,15 @@
             <section id="about">
                 <h2>Copper Syntax</h2>
                 <p>Copper sticks to a very particular syntax pattern within your markup, and works very hard not to stray far from it. Just about everything you do in Copper (with the exception of manually managing stores) follows this basic pattern:</p>
-                <code class="manual-highlight centered">
-                    <div class="inner">
-                        &lt;tag cu-operation="source -> destination"&gt;<br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;Default content<br>
-                        &lt;/tag&gt;
-                    </div>
-                </code>
+                <div class="block">
+                    <span class="lang">HTML</span>
+                    <pre><code class="language-html">
+                        
+&lt;tag cu-operation="source -> destination"&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;Default content<br>
+&lt;/tag&gt;
+                    </code></pre>
+                </div>
             </section>
 
             <section id="binding">
