Update with module type force

--- a/tests/index.html
+++ b/tests/index.html
@@ -47,7 +47,7 @@ const Cu = require('@jwrunge/copper');
 &lt;script src="./scripts/copper.js"&gt;&lt;/script&gt;
 
 &lt;!-- You can also download the 10KB "slim" version, which does not bundle JSDoc types: --&gt;
-&lt;script src="./scripts/slim.copper.js"&gt;&lt;/script&gt;
+&lt;script src="./scripts/copper.slim.js"&gt;&lt;/script&gt;
                     </code></pre>
                 </div>
 
