Update build sequence, fix naming

--- a/tests/bind-sync.html
+++ b/tests/bind-sync.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/tokyo-night-dark.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <title>Copper Demo</title>
+    <title>Manifold Demo</title>
 </head>
 <body>
     <main>
@@ -21,8 +21,8 @@
                 <a href="/components">Components</a>
             </nav>
             <section id="about">
-                <h2>Copper Syntax</h2>
-                <p>Copper sticks to a very particular syntax pattern within your markup, and works very hard not to stray far from it. Just about everything you do in Copper (with the exception of manually managing stores) follows this basic pattern:</p>
+                <h2>Manifold Syntax</h2>
+                <p>Manifold sticks to a very particular syntax pattern within your markup, and works very hard not to stray far from it. Just about everything you do in Manifold (with the exception of manually managing stores) follows this basic pattern:</p>
                 <div class="block">
                     <span class="lang">HTML</span>
                     <pre><code class="language-html">
