--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -58,9 +58,9 @@
   <div class="trans" data-bind="specialStyling(store1)"></div>
 
   <!-- Store script -->
-  <script src="../dist/dev.copper.js" data-init="true"></script>
+  <script src="../dist/dev.manifold.js" data-init="true"></script>
   <script>
-    console.log("COPPER", Cu)
+    console.log("MANIFOLD", Cu)
     Cu.config({
       inDur: 200,
       outDur: 200,
