Fix dom update issues

--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -58,8 +58,8 @@
   <div class="trans" data-bind="specialStyling(store1)"></div>
 
   <!-- Store script -->
-  <script src="../dist/dev.manifold.js" data-init="true"></script>
-  <script src="./interactive.js"></script>
+  <script src="../dist/mfld.js" type="module"></script>
+  <script src="./tests/interactive.js" defer></script>
 </body>
 </html>
 
