Shrinking, fixing issues

--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -53,7 +53,7 @@
   </div>
 
   <div class="special-insert">Default insert</div>
-  <nav data-mffetch="on(mount) /tests/header.html -> (header>this, .special>.special-insert)" data-mfmethod="GET" data-mfoverrides='{ "allowScripts": true }'></nav>
+  <nav data-mfGet="on(mount) /tests/header.html -> (header>this, .special>.special-insert)" data-mfmethod="GET" data-mfoverrides='{ "allowScripts": true }'></nav>
 
   <div class="trans" data-mfBind="specialStyling(store1)"></div>
 
