--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -55,7 +55,7 @@
   </div>
 
   <div class="special-insert">Default insert</div>
-  <nav data-mfGet="on($mount) /tests/header.html -> (header>this, .special>.special-insert)" data-mfmethod="GET" data-mfoverrides='{ "allowScripts": true }'></nav>
+  <nav data-mfGet="on($mount) /tests/header.html" data-mfResolve="$replace"></nav>
 
   <div class="trans" data-mfBind="specialStyling(store1)"></div>
 
