--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -55,7 +55,7 @@
   </div>
 
   <div class="special-insert">Default insert</div>
-  <nav data-mfGet="on($mount) /tests/header.html" data-mfSwapOuter="header -> h1">
+  <nav data-mfGet="on(click) /tests/header.html" data-mfSwapOuter="header -> h1">
     <p>This is some default nav content.</p>
   </nav>
 
@@ -81,11 +81,12 @@
   .mf-trans {
     transition-property: transform, opacity;
     transform: scale(1);
+    /* transform: translateX(0); */
     opacity: 1;
   }
 
   .mf-trans.out {
-    transform: scale(0);
+    transform: scale(2);
     /* transform: translateX(-50%); */
     opacity: 0;
   }
